truncate titles in channel guide to prevent layout issues

--- a/jtr/webSite/css/main.css
+++ b/jtr/webSite/css/main.css
@@ -12,6 +12,7 @@ float:left;
 #stationLabelDiv {
 width: 140px;
 float:left;
+overflow: hidden;
 }
 
 .cgStationLine {
@@ -71,6 +72,15 @@ font-size: 16px;
 height: 48px;
 /*border-width: 1px;*/
     background-color: lightcyan;
+/*overflow: hidden;*/               /* didn't work  */
+max-width: 240px;
+max-height: 48px;
+
+white-space: nowrap;
+width: 100%;                   /* IE6 needs any width */
+overflow: hidden;              /* "overflow" value must be different from  visible"*/ 
+-o-text-overflow: ellipsis;    /* Opera < 11*/
+text-overflow:    ellipsis;    /* IE, Safari (WebKit), Opera >= 11, FF > 6 */
 }
 
 .sixtyMinuteButton {
@@ -80,6 +90,14 @@ padding:5px 10px;
 font-size: 16px;
 height: 48px;
     background-color: lightcyan;
+max-width: 480px;
+max-height: 48px;
+
+white-space: nowrap;
+width: 100%;                   /* IE6 needs any width */
+overflow: hidden;              /* "overflow" value must be different from  visible"*/ 
+-o-text-overflow: ellipsis;    /* Opera < 11*/
+text-overflow:    ellipsis;    /* IE, Safari (WebKit), Opera >= 11, FF > 6 */
 }
 
 .variableButton {
@@ -88,6 +106,13 @@ padding:5px 10px;
 font-size: 16px;
 height: 48px;
     background-color: lightcyan;
+max-height: 48px;
+
+white-space: nowrap;
+width: 100%;                   /* IE6 needs any width */
+overflow: hidden;              /* "overflow" value must be different from  visible"*/ 
+-o-text-overflow: ellipsis;    /* Opera < 11*/
+text-overflow:    ellipsis;    /* IE, Safari (WebKit), Opera >= 11, FF > 6 */
 }
 
 
